# AI-market

./: .dockerignore  .env.example  .gitignore  Dockerfile  NEXT-STEPS.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py  models.py  store.py
app/data/: explosive_radar_weights.json  sp500_universe.json
app/services/: blend_universe.py  dashboards.py  data_sources.py  explosive_radar.py  explosive_radar_data.py  explosive_radar_validation.py  llm.py  market_data.py  opportunity_signals.py  price_forecast.py  scoring.py  sp500.py  summarizer.py  top_performer_universe.py  universe.py
app/static/: styles.css
app/templates/: index.html
deploy/: EC2-DEPLOY-STEPS.md  setup-ec2.sh
frontend/: DEPLOY-FREE-PWA.md  index.html  package-lock.json  package.json  vite.config.js
frontend/public/: manifest.webmanifest
frontend/src/: App.css  App.jsx  api.js
frontend/src/components/: ExplosiveMoveRadar.jsx  Header.jsx  HeroSearch.jsx  IndustryMap.jsx  KPIGrid.jsx  ProductLaunches.jsx  Research.jsx  Sidebar.jsx  StartupFunding.jsx  StockDashboard.jsx  StockScanner.jsx  SummaryBar.jsx  WatchlistBriefing.jsx
frontend/src/utils/: time.js
mobile/: .env.example  .gitignore  DEPLOY-APP-STORE.md  README.md  api.js  app.json  config.js  eas.json  package-lock.json  package.json
mobile/app/: _layout.js
mobile/utils/: relativeTime.js
scripts/: validate_explosive_radar.py
tests/: test_blend_universe.py  test_dashboard_sector.py  test_dedupe_tickers.py  test_explosive_radar.py  test_top_performer_universe.py
(+17 files in other folders)
